Fixed white space bounce from scrolling up and down

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,8 @@
+html, body {
+   overflow: hidden;
+   height: 100%;
+}
+
 body {
    background-image: url("/blurry_background.png");
    background-size: cover;
